--- a/src/app/standing/standing/standing.component.html
+++ b/src/app/standing/standing/standing.component.html
@@ -75,10 +75,13 @@
           <div class="col-4" *ngIf="!secondTeamToCompare">
             <img width="50" height="50">
           </div>
-          <div class="col-1">
-            <a href="">
+          <div class="col-1" *ngIf="secondTeamToCompare && firstTeamToCompare">
+            <a [routerLink]="['/compare',firstTeamToCompare.team_id,secondTeamToCompare.team_id]">
               <button class="btn btn-primary">Compare</button>
             </a>
+          </div>
+          <div class="col-1" *ngIf="!secondTeamToCompare || !firstTeamToCompare">
+            <button class="btn btn-primary" disabled>Compare</button>
           </div>
         </div>
         <!-- /.card-body -->
