--- a/src/app/team/team-detail/team-detail.component.html
+++ b/src/app/team/team-detail/team-detail.component.html
@@ -125,11 +125,11 @@
                 <td style="text-align: right">
                   <span>
                     <img [src]="fixture.home.logo" [alt]="fixture.home.code" width="25" height="25">
-                    {{fixture.home.name}}
+                    {{fixture?.home.name}}
                   </span>
                 </td>
                 <td style="text-align: center">
-                  {{fixture.score}}
+                  {{fixture?.score}}
                 </td>
                 <td>
                   <span>
