--- a/src/app/h2h/h2h/h2h.component.html
+++ b/src/app/h2h/h2h/h2h.component.html
@@ -1,42 +1,40 @@
 <div class="row">
   <div class="col-12">
     <div class="card">
-      <div class="card-header">
-        <h3 class="card-title">
-          Head 2 Head
+      <div class="card-header row">
+        <h3 class="card-title col-9">
+          H2H For {{statisticName}}
         </h3>
-        <div class="card-tools">
-          <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip"
-                  title="Collapse">
-            <i class="fas fa-minus"></i></button>
+        <div class="col-3">
+          <select [(ngModel)]="statisticName" (change)="changeStatisticStandingShow(statisticName)">
+            <option *ngFor="let statistic of statisticNames" value="{{statistic}}">{{statistic}}</option>
+          </select>
         </div>
       </div>
       <!-- /.card-header -->
       <div class="card-body">
         <table id="fixtures" class="table table-hover">
           <tbody>
-          <ng-container *ngFor="let fixture of h2hList">
+          <ng-container *ngFor="let fixture of h2hStatistics">
             <tr>
-              <td>{{convertDateToString(fixture.event_date)}}</td>
+              <td>{{convertDateToString(fixture.eventDate)}}</td>
               <td style="text-align: right">
                   <span>
-                    <img [src]="fixture.homeTeam.logo" [alt]="fixture.homeTeam.code" width="25" height="25">
-                    {{fixture.homeTeam.team_name}}
+                    <img [src]="fixture.home.logo" [alt]="fixture.home.code" width="25" height="25">
+                    {{fixture.home.name}}
                   </span>
               </td>
               <td style="text-align: center">
-                <a routerLink="/fixture/{{fixture.fixture_id}}">
-                  {{fixture.score.fulltime}}
-                </a>
+                {{fixture.score}}
               </td>
               <td>
                   <span>
-                    <img [src]="fixture.awayTeam.logo" [alt]="fixture.awayTeam.code" width="25" height="25">
-                    {{fixture.awayTeam.team_name}}
+                    <img [src]="fixture.away.logo" [alt]="fixture.away.code" width="25" height="25">
+                    {{fixture.away.name}}
                   </span>
               </td>
               <td>
-                <a routerLink="/fixture/{{fixture.fixture_id}}">
+                <a routerLink="/fixture/{{fixture.fixtureId}}">
                   Statistics
                 </a>
               </td>
