add turkey league

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -8,25 +8,28 @@
       <a routerLink="" class="nav-link">Home</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="/league/2790" class="nav-link">Premier League</a>
+      <a href="/standing/2790" class="nav-link">Premier League</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="/league/2755" class="nav-link">Bundesliga</a>
+      <a href="/standing/2755" class="nav-link">Bundesliga</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="/league/2664" class="nav-link">Ligue 1</a>
+      <a href="/standing/2664" class="nav-link">Ligue 1</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="/league/2833" class="nav-link">LaLiga</a>
+      <a href="/standing/2833" class="nav-link">LaLiga</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="/league/2826" class="nav-link">Primeira Liga</a>
+      <a href="/standing/2826" class="nav-link">Primeira Liga</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="/league/2857" class="nav-link">Serie A</a>
+      <a href="/standing/2857" class="nav-link">Serie A</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
-      <a routerLink="/league/2679" class="nav-link">Russian Premier League</a>
+      <a href="/standing/2679" class="nav-link">Russian Premier League</a>
+    </li>
+    <li class="nav-item d-none d-sm-inline-block">
+      <a href="/standing/2816" class="nav-link">Super Lig</a>
     </li>
   </ul>
 
